the most insignificant change

--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -113,7 +113,7 @@ demographic models with local ancestry inference across genomes.
 %It is well known that, because of recombination and random sorting at coalescence events, different locations in the genome might have different genealogical histories. In population genetics, the genealogical history of a set of samples at a neutrally evolving location in the genome can be modeled using the coalescent. In phylogenetics, genealogical histories are instead modeled with an extension of the coalescent known as the "multispecies coalescent." While the standard form of the coalescent assumes a single population with a constant effective population size, the multispecies coalescent incorporates species divergence time parameters to define a "species tree" topology, and each branch of the species tree has its own effective population size.
 
 The multispecies coalescent (MSC) is an extension of the coalescent 
-\citep{kingman1982coalescent}, a model that describes the distribution of genealogical 
+\citep{kingman1982coalescent}, a model describing the distribution of genealogical 
 histories among gene copies from a set of sampled individuals. Whereas the 
 coalescent models a single panmictic population, the MSC includes constraints that prevent 
 samples that belong to different lineages from sharing a most recent genealogical ancestor until prior
